--- a/TodoApp/composer.json
+++ b/TodoApp/composer.json
@@ -9,7 +9,9 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -71,6 +73,7 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
+
 }
